<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Couple</string>
    <string name="label_account_exists">Already have an account?</string>
    <string name="label_account_needed">Don\'t have an account?</string>
	<string name="button_login">Login</string>
	<string name="button_signup">Sign Up</string>
	<string name="button_invite">Invite</string>
	<string name="button_cancel_invite">Cancel</string>
	<string name="button_breakup">Break Up</string>
	<string name="button_accept">Couple!</string>
	<string name="button_decline">Nooooo!</string>
	<string name="label_couple_request" formatted="false">%s &lt;%s&gt; wants to couple with you.</string>
	<string name="button_invite_another">Try Again</string>
	<string name="button_request_another">Try Someone New</string>
	<string name="label_invite_someone">Invite that special someone (by email):</string>
	<string name="label_invite_waiting_1">We will notify you when</string>
	<string name="label_invite_waiting_2">accepts. Sit tight!</string>
	<string name="label_coupled_with">You are coupled with</string>
	<string name="label_request_declined">So sad! Your invitation was declined by</string>
	<string name="label_request_brokenup1">Oh no!</string>
	<string name="label_request_brokenup2">broke up with you!</string>
	<string name="button_chat">Chat</string>
	<string name="hint_name">Name</string>
	<string name="hint_email">Email address</string>
	<string name="hint_password">Password</string>
	<string name="hint_partner_email">Partner Email</string>
	<string name="label_email">Email:</string>
	<string name="label_password">Password:</string>
	<string name="label_preferences_title">Settings - Couple</string>
    <string name="pref_name">pref_name</string>
    <string name="label_pref_name">Your name</string>
    <string name="label_pref_name_summary">What do you call yourself?</string>
    <string name="pref_email">pref_email</string>
    <string name="label_pref_email">Your email address</string>
    <string name="label_pref_email_summary">How do we reach you.</string>
    <string name="label_pref_version">Version Information</string>
    <string name="pref_guid">pref_guid</string>
    <string name="pref_version">pref_version</string>
    <string name="error_invalid_server_response">An invalid response was received from the server: please try again later.</string>
    <string name="error_unknown">An unknown error occured: please check that your network connection is up.</string>
    <string name="error_invalid_email">Please enter a valid email address.</string>
    <string name="error_invalid_password">Please enter a valid password: it must not be blank.</string>
    <string name="error_invalid_name">Please enter a valid name: it must not be blank.</string>
    <string name="message_email_updated">Your email address has been updated: the changes will take effect the next time you start the app.</string>
    <string name="message_name_updated">Your name has been updated: the changes will take effect the next time you start the app.</string>
    <string name="pref_online">pref_online</string>
	<string name="label_pref_online_summary">http://www.getcouple.com</string>
    <string name="label_pref_online_uri">http://www.getcouple.com</string>
    <string name="label_pref_online">Online</string>
    <string name="label_pref_about_you">About You</string>
    <string name="label_pref_about">About</string>
    <string name="pref_invited">pref_invited</string>
    <string name="pref_invited_guid">pref_invited_guid</string>
    <string name="pref_coupled">pref_coupled</string>
    <string name="pref_coupled_guid">pref_coupled_guid</string>
    <string name="pref_partner">pref_partner</string>
    <string name="pref_partner_name">pref_partner_name</string>
    <string name="pref_declined">pref_declined</string>
    <string name="pref_cancelled">pref_cancelled</string>
    <string name="pref_brokenup">pref_brokenup</string>
    <string name="title_logging_in">Logging in&#8230;</string>
    <string name="message_logging_in">One moment please&#8230;</string>
    <string name="title_signing_up">Signing up&#8230;</string>
    <string name="message_signing_up">One moment please&#8230;</string>
    <string name="content_description_titlebar">Screen titlebar</string>
    <string name="title_requesting_couple">Sending request&#8230;</string>
    <string name="message_requesting_couple">One moment please&#8230;</string>
    <string name="title_cancelling_request">Cancelling request&#8230;</string>
    <string name="message_cancelling_request">One moment please&#8230;</string>
    <string name="title_request_breakup">Breaking up&#8230;</string>
    <string name="message_request_breakup">One moment please&#8230;</string>
    <string name="option_decline_all">Reject All</string>
    <string name="title_select_couple">Someone wants to couple!</string>
    <string name="title_declining_request">Declining request&#8230;</string>
    <string name="message_declining_request">One moment please&#8230;</string>
    <string name="title_accepting_request">Accepting request&#8230;</string>
    <string name="message_accepting_request">One moment please&#8230;</string>
    <string name="title_chat" formatted="false">Talking to %s</string>
    <string name="button_support">Support</string>
    <string name="title_support_chat">Couple Support</string>
    <string name="sender_ids">463956399310</string>
    <string name="notification_target">com.hipmob.android.couple.CoupleLogin</string>
    <string name="notification_message">{{count}} unread messages are waiting for you!</string>
</resources>